--- a/src/main/webapp/sjmovie/.prettierrc
+++ b/src/main/webapp/sjmovie/.prettierrc
@@ -1,6 +1,7 @@
 {
-  "printWidth": 100,
+  "printWidth": 120,
   "singleQuote": true,
   "trailingComma": "es5",
-  "tabWidth": 2
+  "tabWidth": 2,
+  "semi": false
 }
